bpo-34862: Guard definition of `convert_sched_param` with POSIX_SPAWN_SETSCHEDULER

* Fixes broken build on OpenBSD-current